# smesh-rust

./: .gitignore  .mcp.json  ARTICLE.md  CLAUDE.local.md.template  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md
smesh-agent/: Cargo.toml
smesh-agent/src/: agent.rs  backend.rs  claude.rs  constitutional.rs  coordinator.rs  lib.rs  ollama.rs  openrouter.rs  streaming.rs
smesh-bounty/: Cargo.toml
smesh-bounty/src/: analyst.rs  coordinator.rs  hunter.rs  lib.rs  specialization.rs  tools.rs  web_deep.rs  web_recon.rs  web_swarm.rs
smesh-cli/: Cargo.toml
smesh-cli/src/: main.rs  review.rs  showcase.rs  threat.rs  viz.rs
smesh-cli/src/adjudicate/: claim.rs  engine.rs  mod.rs  policy.rs  report.rs
smesh-cli/src/adjudicate/policies/: cms_part_d.yaml  commercial_pbm.yaml  fda_21cfr.yaml  medicaid_pdl.yaml  provenance.json
smesh-cli/src/assets/: showcase.html
smesh-cli/src/assets/audio/: README.md  scenes.json
smesh-cli/src/owasp/: corpus.rs  detector.rs  mod.rs  report.rs  score.rs
smesh-cli/src/resilience/: mod.rs  report.rs  scenario.rs
smesh-cli/src/swarm/: agent.rs  coding_swarm.rs  config.rs  coordinator.rs  findings.rs  metrics.rs  mod.rs
smesh-core/: Cargo.toml
smesh-core/benches/: network_bench.rs  signal_bench.rs
smesh-core/src/: error.rs  field.rs  lib.rs  network.rs  node.rs  payload.rs  reputation.rs  signal.rs  trust.rs
smesh-runtime/: Cargo.toml
smesh-runtime/src/: lib.rs  peer.rs  runtime.rs  transport.rs
src/: config.rs  error.rs  main.rs  orchestrator.rs  scheduler.rs  signal.rs  store.rs
