[package]
name = "smesh-bounty"
version.workspace = true
edition.workspace = true
description = "Security bounty hunting swarm - SMESH coordination + agentic tool execution"

[dependencies]
smesh-core = { path = "../smesh-core" }
smesh-agent = { path = "../smesh-agent" }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
regex = "1"
walkdir = "2"
glob = "0.3"
reqwest = { workspace = true }
