[package]
name = "smesh-cli"
version.workspace = true
edition.workspace = true
description = "CLI tools for testing and running SMESH"

[[bin]]
name = "smesh"
path = "src/main.rs"

[dependencies]
smesh-core = { path = "../smesh-core" }
smesh-runtime = { path = "../smesh-runtime" }
smesh-agent = { path = "../smesh-agent" }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
regex = "1"
