[package]
name = "smesh-cli"
version.workspace = true
edition.workspace = true
description = "CLI tools for testing and running SMESH"

[[bin]]
name = "smesh"
path = "src/main.rs"

[dependencies]
smesh-core = { path = "../smesh-core" }
smesh-runtime = { path = "../smesh-runtime" }
smesh-agent = { path = "../smesh-agent" }
smesh-bounty = { path = "../smesh-bounty" }
tokio = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
serde_yaml = "0.9"
chrono = { workspace = true }
sha2 = { workspace = true }
regex = "1"
walkdir = "2"
notify = { version = "6", features = ["macos_kqueue"] }
base64 = "0.22"
