[package]
name = "smesh-core"
version.workspace = true
edition.workspace = true
description = "Core primitives and algorithms for SMESH protocol"

[features]
default = ["std"]
std = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "signal_bench"
harness = false

[[bench]]
name = "network_bench"
harness = false
